--- a/INDEX2.html
+++ b/INDEX2.html
@@ -8,6 +8,6 @@
   </head>
   <body class="min-h-screen">
     <div id="root"></div>
-    <script type="module" src="/src/main2.jsx"></script>
+    <script type="module" src="./src/main2.jsx"></script>
   </body>
 </html>
